syntax = "proto3";
package auth;
import "google/api/annotations.proto";
option go_package = "./proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/auth/register"
    };
  }
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/auth/login"
    };
  }
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string retypedPassword = 3;
}

message RegisterResponse {
  string token = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}